# oriradar-resolver

./: .dockerignore
backend/: README.md  pyproject.toml  requirements.txt
backend/oritypo_solver/: __init__.py  main.py  oricrawl_worker.py  oridigest_worker.py  oriframe_worker.py  store.py  worker.py  worker_health.py
backend/oritypo_solver/routers/: __init__.py  scans.py
backend/oritypo_solver/services/: __init__.py  dns_resolve.py  enrichment_policy.py  http_probe.py  oricert.py  oricrawl.py  oridigest.py  oriframe.py  orisim.py  oristream.py  permutations.py  rdap_lookup.py  scan_engine.py  scoring.py  settings.py
backend/scripts/: bootstrap-venv.sh
backend/tests/: test_enrichment_policy.py  test_oricert.py  test_scan_stack.py  test_scoring_battery.py
crates/orifold/: Cargo.toml  README.md
crates/orifold/src/: lib.rs
crates/oriseek/: Cargo.toml
crates/oriseek/src/: lib.rs  main.rs
deploy/: .env.example  Caddyfile  Dockerfile  Dockerfile.oriframe  README.md  docker-compose.yml  resolver-repo-README.md  resolver-repo.gitignore
docs/: ori-tools.md  scoring.md
