[package]
name = "orifold"
version = "0.1.0"
edition = "2021"
description = "orifold — fold domain strings into typosquat variants (origami metaphor). Standalone Rust engine."
license = "MIT"
repository = "https://github.com/your-org/oriradar"

[lib]
name = "orifold"
path = "src/lib.rs"

[[bin]]
name = "orifold"
path = "src/bin/orifold.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
idna = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
