[package]
name = "oriseek"
version = "0.1.0"
edition = "2021"
description = "oriseek — DNS enrichment engine for Oriradar"
license = "MIT"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
hickory-resolver = "0.25.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
